--- a/aokit-vue/package.json
+++ b/aokit-vue/package.json
@@ -12,7 +12,8 @@
     "bootstrap": "^5.3.8",
     "gsap": "^3.14.2",
     "sass": "^1.94.2",
-    "vue": "^3.5.24"
+    "vue": "^3.5.24",
+    "vue-router": "^4.6.4"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^6.0.1",
