Fixing: not working scroll animation in production
Bundling: Switching to gsap/dist/gsap and gsap/dist/ScrollTrigger solved the core issue of the animation stopping early.
Initialization: We added a delay and reordered the code to ensure the GSAP timeline and ScrollTrigger are created only after the layout is stable and the video metadata is ready.
Safety: Added checks for invalid video duration and Nginx config updates for better error handling.

--- a/aokit-vue/nginx.conf
+++ b/aokit-vue/nginx.conf
@@ -2,6 +2,11 @@ server {
     listen       8111;
     server_name  localhost;
 
+    location /assets/ {
+        root   /usr/share/nginx/html;
+        try_files $uri =404;
+    }
+
     location / {
         root   /usr/share/nginx/html;
         index  index.html index.htm;
